Fixes for Permission and stats time implementation

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,3 +3,5 @@ UsageStatsManager_minSdkVersion=21
 UsageStatsManager_targetSdkVersion=31
 UsageStatsManager_compileSdkVersion=31
 UsageStatsManager_ndkversion=21.4.7075529
+android.useAndroidX=true
+android.enableJetifier=true
