--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@evilratt/react-native-usage-stats-manager",
-  "version": "0.1.1",
+  "name": "@brighthustle/react-native-usage-stats-manager",
+  "version": "0.1.3",
   "description": "Usage Stats Manager Plugin",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -164,7 +164,8 @@
     ]
   },
   "directories": {
-    "example": "example"
+    "example": "example",
+    "lib": "lib"
   },
   "dependencies": {
     "JSONStream": "^1.3.5",
