--- a/example/package.json
+++ b/example/package.json
@@ -9,8 +9,10 @@
     "pods": "pod-install --quiet"
   },
   "dependencies": {
+    "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-native": "0.72.1"
+    "react-native": "0.72.1",
+    "react-native-charts-wrapper": "^0.5.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -19,8 +21,9 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.7",
     "@types/metro-config": "^0.76.3",
-    "metro-react-native-babel-preset": "0.76.5",
-    "babel-plugin-module-resolver": "^5.0.0"
+    "@types/react-native-charts-wrapper": "^0.5.5",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "metro-react-native-babel-preset": "0.76.5"
   },
   "engines": {
     "node": ">=16"
