--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@brighthustle/react-native-usage-stats-manager",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Usage Stats Manager Plugin",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -45,14 +45,14 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/evilrat-technologies/react-native-usage-stats-manager.git"
+    "url": "git+https://github.com/Bright-Hustle/react-native-usage-stats-manager.git"
   },
-  "author": "EvilRATT. <evilrattechnologies@gmail.com> (https://github.com/evilrat-technologies)",
+  "author": "BrightHustle. <arkdeveloper.brighthustle@gmail.com> (https://github.com/Bright-Hustle)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/evilrat-technologies/react-native-usage-stats-manager/issues"
+    "url": "https://github.com/Bright-Hustle/react-native-usage-stats-manager/issues"
   },
-  "homepage": "https://github.com/evilrat-technologies/react-native-usage-stats-manager#readme",
+  "homepage": "https://github.com/Bright-Hustle/react-native-usage-stats-manager#readme",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
@@ -72,8 +72,8 @@
     "jest": "^28.1.1",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
-    "react": "18.1.0",
-    "react-native": "0.70.6",
+    "react": "18.2.0",
+    "react-native": "0.72.3",
     "react-native-builder-bob": "^0.20.0",
     "release-it": "^15.0.0",
     "turbo": "^1.10.7",
@@ -168,7 +168,6 @@
     "lib": "lib"
   },
   "dependencies": {
-    "JSONStream": "^1.3.5",
     "abort-controller": "^3.0.0",
     "absolute-path": "^0.0.0",
     "accepts": "^1.3.8",
@@ -586,6 +585,7 @@
     "json5": "^2.2.3",
     "jsonfile": "^6.1.0",
     "jsonparse": "^1.3.1",
+    "JSONStream": "^1.3.5",
     "jsx-ast-utils": "^3.3.4",
     "keyv": "^4.5.2",
     "kind-of": "^6.0.3",
@@ -844,6 +844,7 @@
     "statuses": "^1.5.0",
     "stdin-discarder": "^0.1.0",
     "stop-iteration-iterator": "^1.0.0",
+    "string_decoder": "^1.3.0",
     "string-length": "^4.0.2",
     "string-natural-compare": "^3.0.1",
     "string-width": "^4.2.3",
@@ -851,7 +852,6 @@
     "string.prototype.trim": "^1.2.7",
     "string.prototype.trimend": "^1.0.6",
     "string.prototype.trimstart": "^1.0.6",
-    "string_decoder": "^1.3.0",
     "strip-ansi": "^6.0.1",
     "strip-bom": "^4.0.0",
     "strip-eof": "^1.0.0",
