--- a/example/package.json
+++ b/example/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "UsageStatsManagerExample",
+  "name": "react-native-usage-stats-manager-example",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "pods": "pod-install --quiet"
+    "build:android": "cd android && ./gradlew assembleDebug --no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a",
+    "build:ios": "cd ios && xcodebuild -workspace UsageStatsManagerExample.xcworkspace -scheme UsageStatsManagerExample -configuration Debug -sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO"
   },
   "dependencies": {
     "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-native": "0.72.1",
+    "react-native": "0.72.6",
     "react-native-charts-wrapper": "^0.5.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.7",
-    "@types/metro-config": "^0.76.3",
+    "@react-native/metro-config": "^0.72.11",
     "@types/react-native-charts-wrapper": "^0.5.5",
     "babel-plugin-module-resolver": "^5.0.0",
-    "metro-react-native-babel-preset": "0.76.5"
+    "metro-react-native-babel-preset": "0.76.8",
+    "pod-install": "^0.1.0"
   },
   "engines": {
     "node": ">=16"
